--- a/Snippeter/Snippeter.csproj
+++ b/Snippeter/Snippeter.csproj
@@ -32,6 +32,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>Resources\copy.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -114,6 +117,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\application_cascade.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Resources\copy.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
